--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "app-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "mongoose": "^5.0.6",
+    "mongoose-unique-validator": "^2.0.0",
     "mysql": "^2.15.0",
+    "nodemon": "^1.14.12",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "request": "^2.83.0",
-    "nodemon": "^1.14.12"
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
