--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "mongoose": "^5.0.6",
     "mongoose-unique-validator": "^2.0.0",
     "mysql": "^2.15.0",
