--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose-unique-validator": "^2.0.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.14.12",
+    "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "request": "^2.83.0"
