--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon ./server/server.js",
+    "start": "node ./server/server.js",
     "app-dev": "webpack -d --watch"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.10",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
@@ -23,7 +24,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "style-loader": "^0.20.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
