--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "cassandra-driver": "^3.4.1",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.10",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
     "mongoose": "^5.0.6",
     "mongoose-unique-validator": "^2.0.0",
-    "mysql": "^2.15.0",
+    "morgan": "^1.9.0",
+    "mysql2": "^1.5.3",
     "nodemon": "^1.14.12",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
+    "sequelize": "^4.37.4",
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "newrelic": "^3.2.0",
     "webpack": "^3.11.0"
   }
 }
